personalization-service/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: personalization-service
  labels:
    name: personalization-service
